--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ runs:
       shell: bash
 
     - name: Set Github Path 
-      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_OUTPUT
+      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
       shell: bash
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
